# central_scipp_ilcsoft_framework

./: CMakeLists.txt
modules_path/: FindXercesC.cmake
src/: processors_collective
src/base/beamcal_recon/: beamcal_reconstructor.cc
src/base/twophoton/: TwoPhoton.h
src/base/util/: .ConversionRdr.cc.swp  .ConversionRdr.h.swp  .scipp_ilc_utilities.cc.swp  ConversionRdr.cc  ConversionRdr.h  FileListReader.cc  FileListReader.h  StdhepFileListReader.cc  StdhepFileListReader.h  polar_coords.cc  polar_coords.h  polar_coords.hpp  scipp_ilc_globals.h  scipp_ilc_utilities.cc  scipp_ilc_utilities.h
src/base/util/conversion_utils/: StdHepJob.cc  StdHepJob.hh  lXDR.cc  lXDR.hh
src/core_processors/: BasicAnalysis.cc  GeometryTest.cc
src/core_processors/include/: BasicAnalysis.h  GeometryTest.h
src/processors_collective/arocha/processors/: .cc  Test_beamcalreconstruction.cc  Test_beamcalreconstruction.cc~  test_beamcal_reconstructor.cc  test_beamcal_reconstructor.cc~  test_beamcal_scanner.cc  test_beamcal_scanner.cc~
src/processors_collective/brsmithe/processors/: BhaBhaAnalysis.root  BhaBhaDeflectionAnalysis.cc  BhaBhaDeflectionAnalysis.cc~  GarfieldBen.cc  NewProc.cc  ParticleDump.cc  ParticleDump.cc~  ParticleDump.root  eBpW_dump.root
src/processors_collective/ceeramir/processors/: #BeamCalRecon_xy.cc#  #beamcal_reconstructor_edit.cc#  BeamCalRecon.cc~  BeamCalRecon_edit.cc  BeamCalRecon_edit.cc~  BeamCalRecon_xy.cc  BeamCalRecon_xy.cc~  BeamCalRecon_xy_001bgd_variable_polar.root  CesarTest.cc  CesarTest.cc~  EventAnalysis.cc  beamcal_reconstructor_edit.cc  beamcal_reconstructor_edit.cc~  beamcal_reconstructor_xy.cc  beamcal_reconstructor_xy.cc~  beamcal_scanner_edit.cc  beamcal_scanner_edit.cc~  hitmap.root  plot_signal.cc  plot_signal.cc~  simple_list_geometry_edit.cc  simple_list_geometry_edit.cc~  simple_list_geometry_xy.cc  simple_list_geometry_xy.cc~
src/processors_collective/eeckholm/processors/: #ElliotsAnalysis.cc#  Elliothitmap.root  ElliotsAnalysis.cc  ElliotsAnalysis.cc~
src/processors_collective/gvanbent/processors/: BeamCalRecon_edit_test_50events_variable_radius.root  Geometry.cc  Geometry.cc~
src/processors_collective/ljdhauth/processors/: EventAnalysisL2.cc  EventAnalysisL2.cc~  EventAnalysis_L.cc  EventAnalysis_L.cc~
src/processors_collective/mvurruti/processors/: #SV_Overlay.cc#  .EnergyFinder.cc.swp  EnergyFinder.cc  SV_Overlay.cc  SV_Overlay.cc~  SV_Overlay.root
src/processors_collective/sczuber/processors/: .SusyCutflow.cc.swp  JetFinder.cxx  JetRazor.cc  JetRazor_.39133._DED.root  JetRazor_.39133._T.root  Razor.cc  SatoruJetFinder.cc  SummerTest.cc  SusyCutflow.cc  SusyCutflow.root  SusyRazor.cc  SusyRazorVariables.cc  SusyRazorVariables.root  SusyRazor_.39133._T.root  SusySVMAnalysis.cc  SusySVMAnalysis.root  Thrust.cc  ThrustRazor.cc  ThrustRazor_.39000._DED.root  ThrustRazor_.39133._DAB.root  ThrustRazor_.39133._DED.root  ThrustRazor_.39133._T.root  ThrustRazor_.39133.root  ThrustRazor_00.root  ThrustRazor_2_DED_133.root  ThrustSusy.cc  ThrustSusy_.39133._DED.root  TwoPhotonSVM.cc  TwoPhotonThrust.cc  TwoPhotonThrustRazor.cc  TwoPhotonThrustRazor_.eW.pW.I39212._DED.root  TwoPhotonThrustRazor_.eW.pW.I39212.root  TwoPhotonThrustRazor_00.root  a.out  short-example.cc  testy.cc  thrust_test.root
src/processors_collective/wwyatt/processors/: #Prediction.cc#  (+35 more)
(+99 files in other folders)
